<resources>
    <string name="app_name">House Price Prediction</string>
    <string name="LoginTop">"Login "</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Loginbutton">Sign In</string>
    <string name="forgot">Forgot Password?</string>
    <string name="RegisterButton">Sign up</string>
    <string name="RegisterLoginTop">Register</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Location">Location</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="OldUser">Already have an account?</string>
    <string name="History">Check History</string>
    <string name="Predict">Predict house price</string>
    <string name="title_activity_prediction_results">PredictionResults</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_phoenixhouse">Welcome To PhoenixHouse</string>
    <string name="phoenix">Phoenix</string>
    <string name="welcome">Welcome</string>
    <string name="predict">Predict</string>
    <string name="history">History</string>
    <string name="trending">Trending</string>
    <string name="the_real_estate_sector_in_kenya_has_seen_an_incredible_growth_over_the_years_we_see_now_many_people_wanting_to_acquire_new_properties_for_residential_or_business_purposes_according_to_cytonn_an_investment_firm_for_the_past_two_decades_the_real_estate_industry_has_participated_in_the_country_s_gdp_in_an_exponential_way_they_show_that_the_growth_has_been_driven_by_the_infrastructural_development_such_as_the_improvement_of_roads_the_stable_gdp_growth_the_demographic_trends_such_as_rapid_urbanisation_and_a_high_total_returns_over_the_traditional_assets">The real estate sector in Kenya has seen an incredible growth over the years. We see now many people wanting to acquire new properties for residential or business purposes. According to Cytonn, an investment firm, for the past two decades the real estate industry has participated in the country’s GDP in an exponential way. They show that the growth has been driven by the infrastructural development such as the improvement of roads, the stable GDP growth, the demographic trends such as rapid urbanisation and a high total returns over the traditional assets.</string>
    <string name="dummy_text">the real estate sector in kenya has seen an incredible growth over the years. Many people want to acquire new properties for residential or business purposes. The real estate industry has participated in the country gdp in an exponential way due to the infrastructural development and a high total returns over the traditional assets</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="house_price_predictor">House Price Predictor</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="you_gmail_com">you@gmail.com</string>
    <string name="password_hint">******************</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create new account</string>
    <string name="jacob">Jacob</string>
    <string name="king">King</string>
    <string name="nairobi">Nairobi</string>
    <string name="_254737982036">+254737982036</string>
    <string name="predict_house_price">Predict the price of your house</string>
    <string name="house_specs">Enter your house details</string>
    <string name="city">City</string>
    <string name="muthaiga">Muthaiga</string>
    <string name="area">Area</string>
    <string name="_10">10</string>
    <string name="size">size</string>
    <string name="bedrooms">bedrooms</string>
    <string name="bathrooms">bathrooms</string>
    <string name="parking">parking</string>
    <string name="history_of_predictions">History of predictions</string>
    <string name="here_is_your_history">Here is your history</string>
    <string name="price">price</string>
    <string name="date">date</string>
    <string name="current_prediction">Here is your current prediction</string>
    <string name="current">Current Prediction</string>
    <string name="prediction_message">Thank you for trusting us and our system. We welcome you one more and are glad to serve you. The prediction of your house is:</string>
    <string name="results">Results</string>
</resources>